# cryptolytica

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DOMAIN.md  ECOSYSTEM.md  Makefile  README.md  TDD.md  events.md
.github/workflows/: rust-ci.yml  rust-test.yml
analytics-domain/: Cargo.toml
analytics-domain/benches/: analytics_benchmark.rs
analytics_core/: README.md
api/: go.mod
api-gateway/: Cargo.toml
api/cmd/server/: main.go
api/internal/config/: config.go
common_core/: Cargo.toml
common_core/src/: error.rs  events.rs  lib.rs  types.rs  utils.rs
config/: config.example.yaml
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/collectors/: mod.rs
core/src/models/: mod.rs
exchange-domain/: Cargo.toml  README.md
exchange-domain/src/: lib.rs
exchange-domain/src/config/: mod.rs
exchange-domain/src/domain/: mod.rs
exchange-domain/src/domain/model/: exchange.rs  mod.rs
exchange-domain/src/domain/repository/: mod.rs
exchange-domain/src/domain/service/: mod.rs
exchange_core/: Cargo.toml
exchange_core/src/: error.rs  exchange.rs  lib.rs  models.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/events/: memory_event_bus.rs  mod.rs
infrastructure/src/events/tests/: memory_event_bus_test.rs
infrastructure_core/: Cargo.toml
market-domain/: Cargo.toml  README.md
market-domain/benches/: time_series_bench.rs
market-domain/src/: lib.rs
market-domain/src/model/: candle.rs  mod.rs
market_data_core/: Cargo.toml
market_data_core/src/: error.rs  lib.rs  models.rs
notification-domain/: Cargo.toml
portfolio-domain/: Cargo.toml
portfolio-domain/benches/: portfolio_benchmark.rs
shared-kernel/: Cargo.toml
shared-kernel/src/: error.rs  event.rs  events.rs  lib.rs  types.rs  utils.rs
shared-kernel/src/domain/: mod.rs
shared-kernel/src/domain/value_object/: mod.rs  symbol.rs  timeframe.rs
trading-domain/: Cargo.toml
trading-domain/benches/: strategy_benchmark.rs
trading-domain/src/: lib.rs
trading-domain/src/events/: market_events.rs  mod.rs
trading-domain/src/events/exchange_events/: order_events.rs
trading-domain/src/events/tests/: market_events_test.rs  order_events_test.rs
trading-domain/src/model/: market_view.rs  mod.rs
trading-domain/src/model/exchange_view/: order.rs
trading_core/: Cargo.toml
trading_core/src/: error.rs  lib.rs  models.rs  strategy.rs
