[package]
name = "cryptolytica-api-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CryptoLytica API 게이트웨이 - 외부 인터페이스 및 인증"

[[bin]]
name = "cryptolytica-api"
path = "src/main.rs"

[lib]
name = "cryptolytica_api_gateway"
path = "src/lib.rs"

[dependencies]
# 내부 의존성
cryptolytica-shared-kernel = { path = "../shared-kernel" }
cryptolytica-market-domain = { path = "../market-domain" }
cryptolytica-exchange-domain = { path = "../exchange-domain" }
cryptolytica-trading-domain = { path = "../trading-domain" }
cryptolytica-portfolio-domain = { path = "../portfolio-domain" }
cryptolytica-notification-domain = { path = "../notification-domain" }
cryptolytica-analytics-domain = { path = "../analytics-domain" }
cryptolytica-infrastructure = { path = "../infrastructure" }

# 직렬화/역직렬화
serde = { workspace = true }
serde_json = { workspace = true }

# 오류 처리
thiserror = { workspace = true }
anyhow = { workspace = true }

# 비동기 런타임
tokio = { workspace = true }
async-trait = { workspace = true }

# 유틸리티
chrono = { workspace = true }
uuid = { workspace = true }

# 로깅
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# API 프레임워크
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# GraphQL
async-graphql = "7.0.1"
async-graphql-axum = "7.0.1"

# WebSocket
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }

# 보안
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# 설정
config = { workspace = true }
dotenv = { workspace = true }

# 문서화
utoipa = "4.1.0"
utoipa-swagger-ui = "5.0.0"

# CORS
axum-extra = "0.9.2"

[dev-dependencies]
# 테스트 도구
rstest = { workspace = true }
mockito = { workspace = true }
tokio-test = { workspace = true }
axum-test = "14.2.2" 