[package]
name = "cryptolytica-exchange-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CryptoLytica 거래소 도메인 - 거래소 연동 모델 및 서비스"

[lib]
name = "cryptolytica_exchange_domain"
path = "src/lib.rs"

[dependencies]
# 내부 의존성
cryptolytica-shared-kernel = { path = "../shared-kernel" }

# 직렬화/역직렬화
serde = { workspace = true }
serde_json = { workspace = true }

# 오류 처리
thiserror = { workspace = true }
anyhow = { workspace = true }

# 비동기 런타임
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# 유틸리티
chrono = { workspace = true }
uuid = { workspace = true }

# 로깅
tracing = { workspace = true }

# 암호화
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# URL 처리
url = "2.5.0"

[dev-dependencies]
# 테스트 도구
rstest = { workspace = true }
mockito = { workspace = true }
tokio-test = { workspace = true }
proptest = { workspace = true }
wiremock = "0.5.22" 