[package]
name = "cryptolytica-market-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CryptoLytica 시장 데이터 도메인 - 시장 데이터 모델 및 서비스"

[lib]
name = "cryptolytica_market_domain"
path = "src/lib.rs"

[features]
default = []
time-series = ["polars", "arrow"]

[dependencies]
# 내부 의존성
cryptolytica-shared-kernel = { path = "../shared-kernel" }

# 직렬화/역직렬화
serde = { workspace = true }
serde_json = { workspace = true }

# 오류 처리
thiserror = { workspace = true }
anyhow = { workspace = true }

# 비동기 런타임
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

# 유틸리티
chrono = { workspace = true }
uuid = { workspace = true }

# 로깅
tracing = { workspace = true }

# 시계열 데이터 - 선택적 의존성
polars = { workspace = true, optional = true }
arrow = { workspace = true, optional = true }

[dev-dependencies]
# 테스트 도구
rstest = { workspace = true }
proptest = { workspace = true }
tokio-test = { workspace = true }
fake = { workspace = true }
criterion = { workspace = true }

# 벤치마크 테스트가 실제로 필요할 때 주석 해제
# [[bench]]
# name = "time_series_bench"
# harness = false 