[package]
name = "cryptolytica-market-data-core"
version = "0.1.0"
edition = "2021"
description = "CryptoLytica 시장 데이터 관리 라이브러리"
authors = ["CryptoLytica Team <your.email@example.com>"]
license = "Apache-2.0"
repository = "https://github.com/kimjooyoon/cryptolytica"

[lib]
name = "cryptolytica_market_data_core"
path = "src/lib.rs"

[dependencies]
# 내부 의존성
cryptolytica-common-core = { path = "../common_core" }
cryptolytica-exchange-core = { path = "../exchange_core" }

# 직렬화/역직렬화
serde = { workspace = true }
serde_json = { workspace = true }

# 오류 처리
thiserror = { workspace = true }
anyhow = { workspace = true }

# 비동기 런타임
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# 유틸리티
chrono = { workspace = true }
uuid = { workspace = true }

# 로깅
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# 데이터베이스
sqlx = { workspace = true }
clickhouse = { workspace = true }

# 시계열 데이터
polars = { workspace = true }
arrow = { workspace = true }
arrow-schema = "50.0.0"
parquet = "50.0.0"

# 캐싱
moka = { version = "0.12.5", features = ["future"] }

# 파일 I/O
csv = "1.3.0"
tempfile = "3.10.1"

[dev-dependencies]
# 테스트 도구
rstest = { workspace = true }
mockito = { workspace = true }
tokio-test = { workspace = true }
criterion = { workspace = true }
tempdir = "0.3.7"
fake = { version = "2.9.2", features = ["derive", "chrono"] } 